<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/story_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/txt_image"
            android:scaleType="fitCenter"
            android:transitionName="photo"
            tools:srcCompat="@tools:sample/avatars" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_showInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="24dp"
            android:clickable="true"
            android:contentDescription="@string/txt_info"
            android:focusable="true"
            android:transitionName="fab"
            app:srcCompat="@drawable/ic_info" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/txt_info"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:transitionName="name" />

            <TextView
                android:id="@+id/tv_storyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/txt_headline"
                android:textSize="32sp"
                android:textStyle="bold"
                android:transitionName="name" />

            <TextView
                android:id="@+id/tv_story_detail_desc"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/txt_desc"
                android:transitionName="description" />

            <TextView
                android:id="@+id/tvDetailClose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:text="@string/txt_close"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:transitionName="description" />
        </LinearLayout>



    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>